--- a/views/index.erb
+++ b/views/index.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>WEB page</title>
+  <title>CODEBREAKER</title>
   <link rel="shortcut icon" href="/icons/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="/css/style.css" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" type="text/css">
